--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -41,10 +41,13 @@
             <div class="welcome">
                 <h1>Matthias Boeckaert</h1>
                 <h2>Front-End Developer In Progress</h2>
-                <a href="#" class="button">Contact Me</a>
+                <div class="button">
+                    <a href="#">Contact Me</a>
+                </div>
             </div>
         </div>
     </div>
+
 
 
 
