--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -18,29 +18,31 @@
     <div class="hero">
         <!-- parallax -->
         <header>
-            <nav>
-                <div class="me">
-                    <h1>Matthias</h1>
-                </div>
-                <div class="hamburger">
-                    <a href="#" class="menu"><i class="fas fa-bars"></i></a>
-                </div>
-            </nav>
+            <div class="container">
+                <nav>
+                    <div class="me">
+                        <h1>Matthias</h1>
+                    </div>
+                    <div class="hamburger">
+                        <a href="#" class="menu"><i class="fas fa-bars"></i></a>
+                    </div>
+                </nav>
+            </div>
             <div class="navbar-side">
                 <div class="close">
-                    <a href="#"><i class="fas fa-times"></i></a>
+                    <a href="#" class="larger"><i class="fas fa-times"></i></a>
                 </div>
-                <a href="#">Home</a>
-                <a href="#">CV</a>
-                <a href="#">Templates</a>
-                <a href="#">Contact</a>
+                <a href="#page1">Home</a>
+                <a href="#page2">Who Am I</a>
+                <a href="#page3">Templates</a>
+                <a href="#page4">Contact</a>
             </div>
         </header>
 
-        <div class="container">
+        <div class="container" id="#page1">
             <div class="welcome">
                 <h1>Matthias Boeckaert</h1>
-                <h2>Front-End Developer In Progress</h2>
+                <h2>Online Resume</h2>
                 <div class="button">
                     <a href="#">Contact Me</a>
                 </div>
@@ -48,7 +50,25 @@
         </div>
     </div>
 
-
+    <div class="container" id="#page2">
+        <div class="wrapper">
+            <div class="presentation">
+                <h1>Who am I?</h1>
+                <h3>Passionate about webdevelopment & marketing</h3>
+            </div>
+            <div class="core">
+                <section class="left-text">
+                    <p>Hier komt er text</p>
+                </section>
+                <section class="linkedinPictu">
+                    <p>hier komt een afbeelding</p>
+                </section>
+                <section class="right-text">
+                    <p>hier komt ook tekst</p>
+                </section>
+            </div>
+        </div>
+    </div>
 
 
 
