page 2 mobile ready
mob rdy

--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -55,16 +55,24 @@
             <div class="presentation">
                 <h1>Who am I?</h1>
                 <h3>Passionate about webdevelopment & marketing</h3>
+                <hr class="horizontal">
             </div>
             <div class="core">
                 <section class="left-text">
-                    <p>Hier komt er text</p>
+                    <p>After working for Coca-Cola & Jet-Import I quit being a merchandiser to become
+                        a web developer. After my training I'd like to be a junior front-end developer.
+                    </p>
                 </section>
-                <section class="linkedinPictu">
-                    <p>hier komt een afbeelding</p>
+                <section class="linkedinPict">
+                    <img src="./afbeeldingen/0.jpeg" alt="me">
                 </section>
                 <section class="right-text">
-                    <p>hier komt ook tekst</p>
+                    <h4>Name:</h4>
+                    <p>Matthias Boeckaert </p>
+                    <h4>Age:</h4>
+                    <p>28 years </p>
+                    <h4>Location:</h4>
+                    <p>Oordegem, Lede </p>
                 </section>
             </div>
         </div>
