--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -82,83 +82,100 @@
         </div>
     </div>
 
-    <div class="container" id="page2">
-        <div class="resume">
-            <h1>Resume</h1>
-            <div class="skillset">
-                <h2>Skills</h2>
-                <li>
-                    <span class="skill">HTML(5)</span>
-                    <span>3.5/5</span>
-                </li>
-                <li>
-                    <span class="skill">CSS(3)</span>
-                    <span>3.5/5</span>
-                </li>
-                <li>
-                    <span class="skill">WordPress</span>
-                    <span class="skill-score">3/5</span>
-                </li>
-                <li>
-                    <span class="skill">SASS</span>
-                    <span class="skill-score">3/5</span>
-                </li>
-                <li>
-                    <span class="skill">Bootstrap</span>
-                    <span class="skill-score">2.5/5</span>
-                </li>
-                <li>
-                    <span class="skill">CSS Grid</span>
-                    <span class="skill-score">2.5/5</span>
-                </li>
-                <li>
-                    <span class="skill">Javascript</span>
-                    <span class="skill-score">2/5</span>
-                </li>
-                <li>
-                    <span class="skill">jQuery</span>
-                    <span class="skill-score">2/5</span>
-                </li>
-                <li>
-                    <span class="skill">Php</span>
-                    <span class="skill-score">1/5</span>
-                </li>
-                <li>
-                    <span class="skill">Python</span>
-                    <span class="skill-score">1/5</span>
-                </li>
-            </div>
-            <div class="skillset">
-                <h2>Language</h2>
-                <li>
-                    <span>Dutch</span>
-                    <span>Mothertongue</span>
-                </li>
-                <li>
-                    <span>English</span>
-                    <span>Very Good</span>
-                </li>
-                <li>
-                    <span>French</span>
-                    <span>Good</span>
-                </li>
-                <li>
-                    <span>German</span>
-                    <span>Notion</span>
-                </li>
-            </div>
-            <div class="skillset">
-                <h2>Experience</h2>
-                <li>
-                    <span>Jet-Import</span>
-                    <span>2018 - 2019</span>
-                </li>
-                <li>
-                    <span>Coca-Cola Ent.</span>
-                    <span>2015 - 2018</span>
-                </li>
+    <div class="newBckgrColor">
+        <div class="container" id="page2">
+            <div class="resume">
+                <h1>Resume</h1>
+                <div class="skillset">
+                    <h3>Skills</h3>
+                    <li class="list">
+                        <span class="skill">HTML(5)</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">CSS(3)</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">WordPress</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">SASS</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">CSS Grid</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">Javascript</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">jQuery</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">Php</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                    </li>
+                    <li>
+                        <span class="skill">Python</span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                    </li>
+                </div>
+                <div class="skillset">
+                    <h3>Language</h3>
+                    <li>
+                        <span>Dutch:</span>
+                        <span class="langGrade">Mothertongue</span>
+                    </li>
+                    <li>
+                        <span>English:</span>
+                        <span class="langGrade">Very Good</span>
+                    </li>
+                    <li>
+                        <span>French:</span>
+                        <span class="langGrade">Good</span>
+                    </li>
+                    <li>
+                        <span>German:</span>
+                        <span class="langGrade">Notion</span>
+                    </li>
+                </div>
+                <div class="skillset">
+                    <h3>Experience</h3>
+                    <li>
+                        <span>Jet-Import:</span>
+                        <span class="langGrade">2018 - 2019</span>
+                        <br>
+                        <span class="textOpmaak">Sales Representative</span>
+                    </li>
+                    <li>
+                        <span>Coca-Cola Ent.:</span>
+                        <span class="langGrade">2015 - 2018</span>
+                        <br>    
+                        <span class="textOpmaak">Service Representative</span>
+                    </li>
+                </div>
             </div>
         </div>
+    </div>
+
+    <div class="container" id="page3">
+        <div class="wrapper">
+            <h1>Templates will appear soon</h1>
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box4"></div>
+        </div>
+        
     </div>
 
 
