--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -90,43 +90,56 @@
                     <h3>Skills</h3>
                     <li class="list">
                         <span class="skill">HTML(5)</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                    class="far fa-star"></i></i></span>
                     </li>
                     <li>
                         <span class="skill">CSS(3)</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                    class="far fa-star"></i></i></span>
                     </li>
                     <li>
                         <span class="skill">WordPress</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i
+                                class="far fa-star"></i></span>
                     </li>
                     <li>
                         <span class="skill">SASS</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
                     </li>
                     <li>
                         <span class="skill">Bootstrap</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
                     </li>
                     <li>
                         <span class="skill">CSS Grid</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
                     </li>
                     <li>
                         <span class="skill">Javascript</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
                     </li>
                     <li>
                         <span class="skill">jQuery</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
                     </li>
                     <li>
                         <span class="skill">Php</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
                     </li>
                     <li>
                         <span class="skill">Python</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
                     </li>
                 </div>
                 <div class="skillset">
@@ -159,7 +172,7 @@
                     <li>
                         <span>Coca-Cola Ent.:</span>
                         <span class="langGrade">2015 - 2018</span>
-                        <br>    
+                        <br>
                         <span class="textOpmaak">Service Representative</span>
                     </li>
                 </div>
@@ -169,13 +182,30 @@
 
     <div class="container" id="page3">
         <div class="wrapper">
-            <h1>Templates will appear soon</h1>
-            <div class="box1"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
-            <div class="box4"></div>
+            <h1>Templates</h1>
+            <h3>Soooooon</h3>
+            <div class="allPictures">
+                <div class="box">
+                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+                </div>
+                <div class="box">
+                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+                </div>
+                <div class="box">
+                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+                </div>
+                <div class="box">
+                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+                </div>
+            </div>
         </div>
-        
+
+    </div>
+
+    <div class="container" id="page4">
+        <form action="">
+
+        </form>
     </div>
 
 
