--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <div class="newBckgrColor">
+    <div class="bckgrColor">
         <div class="container" id="page2">
             <div class="resume">
                 <h1>Resume</h1>
@@ -202,11 +202,31 @@
 
     </div>
 
-    <div class="container" id="page4">
-        <form action="">
+    <div class="bckgrColor">
+        <div class="container" id="page4">
+            <div class="formWrapper">
+                <h1>Contact Me</h1>
+                <h3>Questions or Interested?</h3>
+                <form action="/action_page.php">
+                    <label for="fname">First Name:</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Enter..">
 
-        </form>
+                    <label for="lname">Last Name:</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Enter..">
+
+                    <label for="subject">Subject:</label>
+                    <textarea id="subject" name="subject" placeholder="Enter.." style="height:200px"></textarea>
+
+                    <input type="submit" value="Submit" class="submit">
+                </form>
+            </div>
+        </div>
     </div>
+
+
+
+
+
 
 
 
