--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -16,210 +16,185 @@
 </head>
 
 <body>
-
     <div class="hero">
-        <!-- parallax -->
-        <header>
-            <div class="container">
-                <nav>
-                    <div class="me">
-                        <h1>Matthias</h1>
-                    </div>
-                    <div class="hamburger">
-                        <a href="#" class="menu"><i class="fas fa-bars"></i></a>
-                    </div>
-                </nav>
-            </div>
-            <div class="navbar-side">
-                <div class="close">
-                    <a href="#" class="larger"><i class="fas fa-times"></i></a>
-                </div>
-                <a href="#page1">Who Am I</a>
-                <a href="#page2">Resume</a>
-                <a href="#page3">Templates</a>
-                <a href="#page4">Contact</a>
-            </div>
-        </header>
+        <div class="welcome">
+            <h1>Matthias Boeckaert</h1>
+            <h2>Scroll down and get to know me</h2>
+        </div>
+    </div>
 
-        <div class="container">
-            <div class="welcome">
-                <h1>Matthias Boeckaert</h1>
-                <h2>Online Resume</h2>
-                <div class="button">
-                    <a href="#">Contact Me</a>
+    <div class="hamburgerMenu">
+        <a href="" class="hamburger"><i class="fas fa-bars"></i></a>
+    </div>
+
+    <div class="whoAmI" id="page1">
+        <div class="presentation">
+            <h1>Who am I?</h1>
+            <h3>Passionate about webdevelopment & marketing</h3>
+            <hr class="horizontal">
+        </div>
+        <div class="core">
+            <section class="left-text">
+                <p>After working for Coca-Cola & Jet-Import I quit being a merchandiser to become
+                    a web developer. After my training I'd like to be a junior front-end developer.
+                </p>
+            </section>
+            <section class="linkedinPict">
+                <img src="./afbeeldingen/0.jpeg" alt="me">
+            </section>
+            <section class="right-text">
+                <h4>Name:</h4>
+                <p>Matthias Boeckaert </p>
+                <div class="text-margin">
+                    <h4>Age:</h4>
+                    <p>28 years </p>
                 </div>
+                <h4>Location:</h4>
+                <p>Oordegem, Lede </p>
+            </section>
+        </div>
+        <div class="navbar-side">
+            <div class="close">
+                <a href="#" class="larger"><i class="fas fa-times"></i></a>
+            </div>
+            <a href="#page1">Who Am I</a>
+            <a href="#page2">Resume</a>
+            <a href="#page3">Templates</a>
+            <a href="#page4">Contact</a>
+        </div>
+    </div>
+
+    <div class="bckgrColor">
+        <div class="resume" id="page2">
+            <h1>Resume</h1>
+            <div class="skillset">
+                <h3>Skills</h3>
+                <li class="list">
+                    <span class="skill">HTML(5)</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">CSS(3)</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">WordPress</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i
+                            class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">SASS</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">Bootstrap</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">CSS Grid</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">Javascript</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">jQuery</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">Php</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">Python</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+            </div>
+            <div class="skillset">
+                <h3>Language</h3>
+                <li>
+                    <span>Dutch:</span>
+                    <span class="langGrade">Mothertongue</span>
+                </li>
+                <li>
+                    <span>English:</span>
+                    <span class="langGrade">Very Good</span>
+                </li>
+                <li>
+                    <span>French:</span>
+                    <span class="langGrade">Good</span>
+                </li>
+                <li>
+                    <span>German:</span>
+                    <span class="langGrade">Notion</span>
+                </li>
+            </div>
+            <div class="skillset">
+                <h3>Experience</h3>
+                <li>
+                    <span>Jet-Import:</span>
+                    <span class="langGrade">2018 - 2019</span>
+                    <br>
+                    <span class="textOpmaak">Sales Representative</span>
+                </li>
+                <li>
+                    <span>Coca-Cola Ent.:</span>
+                    <span class="langGrade">2015 - 2018</span>
+                    <br>
+                    <span class="textOpmaak">Service Representative</span>
+                </li>
             </div>
         </div>
     </div>
 
-    <div class="container" id="page1">
-        <div class="wrapper">
-            <div class="presentation">
-                <h1>Who am I?</h1>
-                <h3>Passionate about webdevelopment & marketing</h3>
-                <hr class="horizontal">
+    <div class="templates" id="page3">
+        <h1>Templates</h1>
+        <h3>Soooooon</h3>
+        <div class="allPictures">
+            <div class="box">
+                <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
             </div>
-            <div class="core">
-                <section class="left-text">
-                    <p>After working for Coca-Cola & Jet-Import I quit being a merchandiser to become
-                        a web developer. After my training I'd like to be a junior front-end developer.
-                    </p>
-                </section>
-                <section class="linkedinPict">
-                    <img src="./afbeeldingen/0.jpeg" alt="me">
-                </section>
-                <section class="right-text">
-                    <h4>Name:</h4>
-                    <p>Matthias Boeckaert </p>
-                    <div class="text-margin">
-                        <h4>Age:</h4>
-                        <p>28 years </p>
-                    </div>
-                    <h4>Location:</h4>
-                    <p>Oordegem, Lede </p>
-                </section>
+            <div class="box">
+                <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+            </div>
+            <div class="box">
+                <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
+            </div>
+            <div class="box">
+                <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
             </div>
         </div>
     </div>
 
     <div class="bckgrColor">
-        <div class="container" id="page2">
-            <div class="resume">
-                <h1>Resume</h1>
-                <div class="skillset">
-                    <h3>Skills</h3>
-                    <li class="list">
-                        <span class="skill">HTML(5)</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
-                                    class="far fa-star"></i></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">CSS(3)</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
-                                    class="far fa-star"></i></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">WordPress</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i
-                                class="far fa-star"></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">SASS</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">Bootstrap</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">CSS Grid</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">Javascript</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">jQuery</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">Php</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
-                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-                    </li>
-                    <li>
-                        <span class="skill">Python</span>
-                        <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
-                                class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-                    </li>
-                </div>
-                <div class="skillset">
-                    <h3>Language</h3>
-                    <li>
-                        <span>Dutch:</span>
-                        <span class="langGrade">Mothertongue</span>
-                    </li>
-                    <li>
-                        <span>English:</span>
-                        <span class="langGrade">Very Good</span>
-                    </li>
-                    <li>
-                        <span>French:</span>
-                        <span class="langGrade">Good</span>
-                    </li>
-                    <li>
-                        <span>German:</span>
-                        <span class="langGrade">Notion</span>
-                    </li>
-                </div>
-                <div class="skillset">
-                    <h3>Experience</h3>
-                    <li>
-                        <span>Jet-Import:</span>
-                        <span class="langGrade">2018 - 2019</span>
-                        <br>
-                        <span class="textOpmaak">Sales Representative</span>
-                    </li>
-                    <li>
-                        <span>Coca-Cola Ent.:</span>
-                        <span class="langGrade">2015 - 2018</span>
-                        <br>
-                        <span class="textOpmaak">Service Representative</span>
-                    </li>
-                </div>
-            </div>
-        </div>
-    </div>
+        <div class="formWrapper" id="page4">
+            <h1>Contact Me</h1>
+            <h3>Questions or Interested?</h3>
+            <form action="/action_page.php">
+                <label for="fname">First Name:</label>
+                <input type="text" id="fname" name="firstname" placeholder="Enter..">
 
-    <div class="container" id="page3">
-        <div class="wrapper">
-            <h1>Templates</h1>
-            <h3>Soooooon</h3>
-            <div class="allPictures">
-                <div class="box">
-                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
-                </div>
-                <div class="box">
-                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
-                </div>
-                <div class="box">
-                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
-                </div>
-                <div class="box">
-                    <img src="./afbeeldingen/head.jpg" class="imgOfHead" alt="imgOfHead">
-                </div>
-            </div>
-        </div>
+                <label for="lname">Last Name:</label>
+                <input type="text" id="lname" name="lastname" placeholder="Enter..">
 
-    </div>
+                <label for="subject">Subject:</label>
+                <textarea id="subject" name="subject" placeholder="Enter.." style="height:200px"></textarea>
 
-    <div class="bckgrColor">
-        <div class="container" id="page4">
-            <div class="formWrapper">
-                <h1>Contact Me</h1>
-                <h3>Questions or Interested?</h3>
-                <form action="/action_page.php">
-                    <label for="fname">First Name:</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Enter..">
-
-                    <label for="lname">Last Name:</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Enter..">
-
-                    <label for="subject">Subject:</label>
-                    <textarea id="subject" name="subject" placeholder="Enter.." style="height:200px"></textarea>
-
-                    <input type="submit" value="Submit" class="submit">
-                </form>
-            </div>
+                <input type="submit" value="Submit" class="submit">
+            </form>
         </div>
     </div>
 
