--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -40,13 +40,12 @@
                     a web developer. After my training I'd like to be a junior front-end developer.
                 </p>
             </section>
-            <section class="left-text-extra">
-                <p>Na vier jaar als te hebben gewerkt als sales-promotor voor Coca-Cola en Jet-Import heb ik besloten om
-                    voor een nieuwe wending te gaan in mijn professionele carrière, namelijk web developer. In mijn
-                    marketing-studie en in avondschool heb ik al enige html/css kennis opgedaan om uiteindelijk nu te
-                    beslissen er effectief iets mee te beginnen. Zo ben ik beland bij de opleiding van Multi-medi via
-                    VDAB. Tijdens deze opleiding heb ik mij voornamelijk gefocused op het front-end gedeelte.Naar de
-                    toekomst toe sta ik ook open om me te verdiepen in de back-end.</p>
+            <section class="mobile-visible">
+                <p>After four years working as a sales promotor I decided to take a new turn in my career and become a
+                    webdeveloper. That's why I'm currently following a full-time course till February 2020. So far I
+                    developed some front-end skills and would like to be active as one. Furthermore I want to develop
+                    some back-end skills as well. And if I can be active in the marketing world that would be a huge
+                    plus.</p>
             </section>
             <section class="linkedinPict">
                 <img src="./afbeeldingen/0.jpeg" alt="me">
