whoAmiI qeury proof

--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -28,6 +28,7 @@
         <a href="" class="hamburger"><i class="fas fa-bars"></i></a>
     </div>
 
+
     <div class="whoAmI" id="page1">
         <div class="presentation">
             <h1>Who am I?</h1>
@@ -41,9 +42,11 @@
                 </p>
             </section>
             <section class="mobile-visible">
-                <p>After four years working as a sales promotor I decided to take a new turn in my career and become a
+                <p>After four years working as a sales promotor I decided to take a new turn in my career and become
+                    a
                     webdeveloper. That's why I'm currently following a full-time course till February 2020. So far I
-                    developed some front-end skills and would like to be active as one. Furthermore I want to develop
+                    developed some front-end skills and would like to be active as one. Furthermore I want to
+                    develop
                     some back-end skills as well. And if I can be active in the marketing world that would be a huge
                     plus.</p>
             </section>
