start resume query

--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -54,7 +54,7 @@
                 <img src="./afbeeldingen/0.jpeg" alt="me">
             </section>
             <section class="right-text">
-                <h4>Name:</h4>
+                <h4 class="name">Name:</h4>
                 <p>Matthias Boeckaert </p>
                 <div class="text-margin">
                     <h4>Age:</h4>
@@ -80,7 +80,7 @@
 
     <div class="resume" id="page2">
         <h1>Resume</h1>
-        <div class="skillset">
+        <div class="skillset skillsDiv">
             <h3>Skills</h3>
             <li class="list">
                 <span class="skill">HTML(5)</span>
@@ -133,7 +133,7 @@
                         class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
             </li>
         </div>
-        <div class="skillset">
+        <div class="skillset language">
             <h3>Language</h3>
             <li>
                 <span>Dutch:</span>
@@ -152,7 +152,7 @@
                 <span class="langGrade">Notion</span>
             </li>
         </div>
-        <div class="skillset">
+        <div class="skillset experience">
             <h3>Experience</h3>
             <li>
                 <span>Jet-Import:</span>
