--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -80,92 +80,99 @@
 
     <div class="resume" id="page2">
         <h1>Resume</h1>
-        <div class="skillset skillsDiv">
-            <h3>Skills</h3>
-            <li class="list">
-                <span class="skill">HTML(5)</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
-            </li>
-            <li>
-                <span class="skill">CSS(3)</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></i></span>
-            </li>
-            <li>
-                <span class="skill">WordPress</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></span>
-            </li>
-            <li>
-                <span class="skill">SASS</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-            </li>
-            <li>
-                <span class="skill">Bootstrap</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-            </li>
-            <li>
-                <span class="skill">CSS Grid</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
-            </li>
-            <li>
-                <span class="skill">Javascript</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-            </li>
-            <li>
-                <span class="skill">jQuery</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-            </li>
-            <li>
-                <span class="skill">Php</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
-                        class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-            </li>
-            <li>
-                <span class="skill">Python</span>
-                <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
-                        class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
-            </li>
-        </div>
-        <div class="skillset language">
-            <h3>Language</h3>
-            <li>
-                <span>Dutch:</span>
-                <span class="langGrade">Mothertongue</span>
-            </li>
-            <li>
-                <span>English:</span>
-                <span class="langGrade">Very Good</span>
-            </li>
-            <li>
-                <span>French:</span>
-                <span class="langGrade">Good</span>
-            </li>
-            <li>
-                <span>German:</span>
-                <span class="langGrade">Notion</span>
-            </li>
-        </div>
-        <div class="skillset experience">
-            <h3>Experience</h3>
-            <li>
-                <span>Jet-Import:</span>
-                <span class="langGrade">2018 - 2019</span>
-                <br>
-                <span class="textOpmaak">Sales Representative</span>
-            </li>
-            <li>
-                <span>Coca-Cola Ent.:</span>
-                <span class="langGrade">2015 - 2018</span>
-                <br>
-                <span class="textOpmaak">Service Representative</span>
-            </li>
+        <div class="skillsDiv">
+            <div class="skillset ">
+                <h3>Skills</h3>
+                <li>
+                    <span class="skill">HTML(5)</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">CSS(3)</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="fas fa-star-half-alt"></i><i
+                                class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">WordPress</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i
+                            class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">SASS</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">Bootstrap</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">CSS Grid</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"><i class="far fa-star"></i><i class="far fa-star"></i></i></span>
+                </li>
+                <li>
+                    <span class="skill">Javascript</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">jQuery</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">Php</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+                <li>
+                    <span class="skill">Python</span>
+                    <span class="skill-score"><i class="fas fa-star"></i><i class="far fa-star"></i><i
+                            class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                </li>
+            </div>
+            <div class="skillset ">
+                <h3>Language</h3>
+                <li>
+                    <span>Dutch:</span>
+                    <span class="langGrade">Mothertongue</span>
+                </li>
+                <li>
+                    <span>English:</span>
+                    <span class="langGrade">Very Good</span>
+                </li>
+                <li>
+                    <span>French:</span>
+                    <span class="langGrade">Good</span>
+                </li>
+                <li>
+                    <span>German:</span>
+                    <span class="langGrade">Notion</span>
+                </li>
+            </div>
+            <div class="skillset ">
+                <h3>Experience</h3>
+                <li>
+                    <span>Jet-Import:</span>
+                    <span class="langGrade">2018 - 2019</span>
+                </li>
+                <li>
+                    <span class="textOpmaak">Sales Representative</span>
+                </li>
+                <li>
+                    <span>Coca-Cola Ent.:</span>
+                    <span class="langGrade">2015 - 2018</span>
+                </li>
+                <li>
+                    <span class="textOpmaak">Service Representative</span>
+                </li>
+            </div>
         </div>
     </div>
 
