--- a/persoonlijke website/index.html
+++ b/persoonlijke website/index.html
@@ -28,6 +28,15 @@
         <a href="" class="hamburger"><i class="fas fa-bars"></i></a>
     </div>
 
+    <div class="navbar-side">
+        <div class="close">
+            <a href="#" class="larger"><i class="fas fa-times"></i></a>
+        </div>
+        <a href="#page1">Who Am I</a>
+        <a href="#page2">Resume</a>
+        <a href="#page3">Templates</a>
+        <a href="#page4">Contact</a>
+    </div>
 
     <div class="whoAmI" id="page1">
         <div class="presentation">
@@ -45,7 +54,7 @@
                 <p>After four years working as a sales promotor I decided to take a new turn in my career and become
                     a
                     webdeveloper. That's why I'm currently following a full-time course till February 2020. So far I
-                    developed some front-end skills and would like to be active as one. Furthermore I want to
+                    developed some front-end skills and would like to beF as one. Furthermore I want to
                     develop
                     some back-end skills as well. And if I can be active in the marketing world that would be a huge
                     plus.</p>
@@ -64,15 +73,7 @@
                 <p>Oordegem, Lede </p>
             </section>
         </div>
-        <div class="navbar-side">
-            <div class="close">
-                <a href="#" class="larger"><i class="fas fa-times"></i></a>
-            </div>
-            <a href="#page1">Who Am I</a>
-            <a href="#page2">Resume</a>
-            <a href="#page3">Templates</a>
-            <a href="#page4">Contact</a>
-        </div>
+
     </div>
 
     <div class="parallax">
